Divide functionality in components,  db status component prototype and start of all runs component

--- a/galina/package.json
+++ b/galina/package.json
@@ -20,7 +20,7 @@
 
   "proxy": {
     "/": {
-        "target": "http://localhost:3000"
+        "target": "http://newcontroller.perftestmv.local:3000"
     }
   }
 
