Runinfo page with both info selectable by page or by test

--- a/galina/package.json
+++ b/galina/package.json
@@ -20,7 +20,7 @@
 
   "proxy": {
     "/": {
-        "target": "http://newcontroller.perftestmv.local:3000"
+        "target": "http://vmagent29.perftestmv.local:3000"
     }
   }
 
