Begin work for plotting graph, table for run info

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ famke/public
 
 
 galina/loaddb.saz
+galina/LoadTestDbAccessSvc - Shortcut.lnk
+galina/CounterCategories.json
+galina/LoadTest_Page.json
+galina/Memory.json
+galina/Processor.json
