--- a/galina/package.json
+++ b/galina/package.json
@@ -8,7 +8,9 @@
     "react-scripts": "1.0.14",
     "material-ui": "0.19.4",
     "lodash.merge":"4.6.0",
-    "react-json-tree":"^0.11.0"
+    "react-json-tree":"^0.11.0",
+    "react-plotlyjs":"^0.4.4",
+    "plotly.js":"^1.31.2"
     
   },
   "scripts": {
