Added test description and comments info to gui

--- a/galina/package.json
+++ b/galina/package.json
@@ -22,7 +22,7 @@
 
   "proxy": {
     "/": {
-        "target": "http://vmagent29.perftestmv.local:3000"
+        "target": "http://vmagent29.perftestmv.local"
     }
   }
 
